# library-for-working-with-matrices

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_RUS.md  matrix.hpp
scripts/: build.sh  run_tests.sh
src/: CMakeLists.txt  Doxyfile  Makefile  makefile  matrix.cpp  matrix.hpp
src/block_matrix/: block_matrix.hpp
src/matrix/: matrix.hpp
src/sparse_matrix/: sparse_matrix.hpp
src/tests/: matrix_tests.cpp  sparse_matrix_tests.cpp
